build(dependencies): 更新项目依赖- 移除了 application.properties 文件- 添加了 spring-ai-starter-mcp-server 依赖，适用于命令行和桌面工具 - 保留了 spring-ai-starter-mcp-server-webmvc 依赖，适合于 SSE 和 HTTP

--- a/pom.xml
+++ b/pom.xml
@@ -46,12 +46,20 @@
             <scope>test</scope>
         </dependency>
 
+
+        <!-- 适用于命令行和桌面工具-->
+        <dependency>
+            <groupId>org.springframework.ai</groupId>
+            <artifactId>spring-ai-starter-mcp-server</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+
+        <!-- 适合于 sse 和 http-->
         <dependency>
             <groupId>org.springframework.ai</groupId>
             <artifactId>spring-ai-starter-mcp-server-webmvc</artifactId>
             <version>1.0.0</version>
         </dependency>
-
 
         <dependency>
             <groupId>org.apache.poi</groupId>
