feat(service): 生成文件下载地址
- 新增 DownloadController 用于处理文件下载请求
- 修改 Markdown2OtherServiceImpl，使用 app.base-url 配置项生成下载地址- 在 application.yml 中添加 server.port 和 app.base-url 配置

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,12 @@
+server:
+  port: 8888
 spring:
   ai:
     mcp:
       server:
         name: mcp-server
         version: 1.0.0
+app:
+  base-url: http://112.74.171.115:8888
 #        type: ASYNC
 #        sse-message-endpoint: /mcp/messages
