feat(service): 更新文件下载路径和接口
- 修改 application.yml 中的服务器配置，添加 context-path
- 更新 DownloadController 中的下载路径- 调整 Markdown2OtherServiceImpl 中的文件下载 URL 生成逻辑
- 更新 README.MD 文件，移除不必要的项目结构说明- 修改 pom.xml 中的版本号为 0.0.1

--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>com.hbh</groupId>
     <artifactId>m2e-mcp</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1</version>
     <name>m2e-mcp</name>
     <description>m2e-mcp</description>
     <url/>
